--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Test if the title of your YouTube video will get you demonetized">
+
 
     <title>Will this be demonetized?</title>
 </head>
 <body class="color-primary">
     <div class="container">
         <h1>Will this be demonetized?</h1>
+        <p>Test if the title of your YouTube video will get you demonetized. Base on <a href="https://www.youtube.com/watch?v=ll8zGaWhofU" target="_blank">this video.</a></p>
         <div class="query">
             <form action="#" id="search">
                 <input type="text" placeholder="ENTER YOUR TITLE">
